crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-c1e8c7f4c191.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-c1e8c7f4c191.js
---
// Is valid but hard to compute by brute-forcing
function MyComponent() {
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	if (c) {}
	useHook();
	useHook();
	useHook();
	useHook();
	useHook();
	useHook();
	useHook();
	useHook();
	useHook();
	useHook();
}
