crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-c5d1f3143c4c.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-c5d1f3143c4c.js
---
// Regression test for incorrectly flagged valid code.
function RegressionTest() {
	cond ? a : b;
	useState();
}
