crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-cfdfe5572fc7.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-cfdfe5572fc7.js
---
// Valid because hooks can call hooks.
function useHook() {
	useHook1();
	useHook2();
}
