crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-df4d750736f3.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-df4d750736f3.js
---
No changes.
