crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-e5dd6caf4084.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-e5dd6caf4084.js
---
// Valid because functions can call functions.
function normalFunctionWithConditionalFunction() {
	if (cond) {
		doSomething();
	}
}
