crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-e66a744cffbe.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-e66a744cffbe.js
---
import { c as _c } from "react/compiler-runtime";
// Valid because hooks can be used in anonymous function arguments to
// forwardRef.
const FancyButton = forwardRef(function(props, ref) {
	const $ = _c(3);
	useHook();
	let t0;
	if ($[0] !== props || $[1] !== ref) {
		t0 = <button {...props} ref={ref} />;
		$[0] = props;
		$[1] = ref;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
});
