crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-eacfcaa6ef89.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-eacfcaa6ef89.js
---
import { c as _c } from "react/compiler-runtime";
// Valid because hooks can be used in anonymous function arguments to
// memo.
const MemoizedFunction = memo(function(props) {
	const $ = _c(2);
	useHook();
	let t0;
	if ($[0] !== props) {
		t0 = <button {...props} />;
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
});
