crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-fe6042f7628b.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-fe6042f7628b.js
---
No changes.
