crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__todo.bail.rules-of-hooks-28a78701970c.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/todo.bail.rules-of-hooks-28a78701970c.js
---
import { c as _c } from "react/compiler-runtime";
// @skip
// Unsupported input
// Valid because hooks can be used in anonymous function arguments to
// React.memo.
const MemoizedFunction = React.memo((props) => {
	const $ = _c(2);
	useHook();
	let t0;
	if ($[0] !== props) {
		t0 = <button {...props} />;
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
});
