crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__todo.bail.rules-of-hooks-6949b255e7eb.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/todo.bail.rules-of-hooks-6949b255e7eb.js
---
import { c as _c } from "react/compiler-runtime";
// @skip
// Unsupported input
// Valid because the neither the conditions before or after the hook affect the hook call
// Failed prior to implementing BigInt because pathsFromStartToEnd and allPathsFromStartToEnd were too big and had rounding errors
const useSomeHook = () => {};
const SomeName = () => {
	const $ = _c(1);
	(FILLER ?? FILLER, FILLER) ?? FILLER;
	(FILLER ?? FILLER, FILLER) ?? FILLER;
	(FILLER ?? FILLER, FILLER) ?? FILLER;
	(FILLER ?? FILLER, FILLER) ?? FILLER;
	(FILLER ?? FILLER, FILLER) ?? FILLER;
	(FILLER ?? FILLER, FILLER) ?? FILLER;
	(FILLER ?? FILLER, FILLER) ?? FILLER;
	(FILLER ?? FILLER, FILLER) ?? FILLER;
	useSomeHook();
	if (anyConditionCanEvenBeFalse) {
		return null;
	}
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <React.Fragment>{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}{FILLER ? FILLER : FILLER}</React.Fragment>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
};
